# cm3soc-demo

./: .gitignore  CMakeLists.txt  README.md  cm3soc.lds  main.c  startup.c  sys_irq_handlers.c
CMSIS/Device/Include/cm3soc/: cm3soc.h
bd/: .gitignore  soc_top.bd  soc_top.bxml  soc_top_ooc.xdc
bd/hdl/: soc_top_wrapper.v
bsp/standalone_bsp_0/: .sdkproject  Makefile  system.mss
bsp/standalone_bsp_0/CORTEXM3_AXI_0/include/: xparameters.h
doc/: memory-mapping.md  software-quickstart.md
fpga/ax7020/: .gitignore  cortex-m3-test.xpr  main.xdc
hdl/: tri_buf.v
openocd/: cm3soc.cfg  daplink.cfg  ft232h.cfg
software/: .gitignore  CMakeLists.txt  cm3soc.lds  main.c  startup.c
software/bsp/standalone_bsp_0/: .cproject  Makefile  system.mss
software/bsp/standalone_bsp_0/CORTEXM3_AXI_0/include/: xparameters.h
software/bsp/standalone_bsp_0/CORTEXM3_AXI_0/lib/: .gitignore
software/bsp/standalone_bsp_0/CORTEXM3_AXI_0/libsrc/bram_v4_3/src/: xbram_g.c
